Removed CreateSessionDescriptionRequest and SetSessionDescriptionRequest main-thread DCHECKs from their destructors.

CreateSessionDescriptionRequest and SetSessionDescriptionRequest are
reference counted and have callback methods that are invoked on the
signaling thread. If invoked on a non-main thread a post occurs to the
main thread, referencing the object until the callback has completed on
the main thread. There was an incorrect assumption that the object would
also be destroyed on the main thread. But because the callback may
sometimes complete before the signaling thread has had an opportunity to
dereference the object it can be destroyed on the signaling thread.
This CL allows it to be destroyed on any thread.

BUG=634342

Review-Url: https://codereview.chromium.org/2222553002
Cr-Commit-Position: refs/heads/master@{#412523}

Former-commit-id: 4d31d2e1163f6f3125470695ccd60a30830a1cde